[package]
authors = ["Florian Blasius <flovanpt@posteo.de>"]
description = ""
edition = "2018"
repository = "https://codeberg.org/morph/morph"
readme = "README.md"
name = "morph"
version = "0.1.0"
keywords = [
    "embedded",
    "no_std",
    "ui",
]

[lib]
name = "morph"
path = "src/lib.rs"
test = false

[dependencies]
derive_more = "0.99.7"

[target.thumbv7m-none-eabi.dependencies]
embedded-hal = "0.2.3"
nb = "0.1.2"
cortex-m = "0.6.2"
cortex-m-rt = "0.6.12"
alloc-cortex-m = "0.3.5"
cortex-m-semihosting = "0.3.5"
panic-halt = "0.2.0"
embedded-graphics = "0.5.2"
st7735-lcd = { version = "0.6.2", features = ["graphics"] }
stm32f1xx-hal = { version = "0.5.3", features = ["stm32f103", "medium"] }

[target.wasm32-unknown-unknown.dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
[target.wasm32-unknown-unknown.dependencies.web-sys]
    version = "0.3.4"
    features = [
        'console', 
        'CanvasRenderingContext2d',
        'Document',
        'Element',
        'HtmlCanvasElement',
        'HtmlElement',
        'Window',
    ]

[features]
default = ["console_error_panic_hook"]
no_std = []

[[examples]]
name = "minimal_cortex_m"
test = false
bench = false

[profile.release]
opt-level = "z"
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations