[package]
authors = ["Florian Blasius <flovanpt@posteo.de>"]
description = "Embedded Rust UI-Toolkit (no_std)."
edition = "2018"
repository = "https://codeberg.org/morph/morph"
readme = "README.md"
license = "MIT"
name = "morph"
version = "0.1.0"
keywords = [
    "embedded",
    "no_std",
    "ui",
]

[lib]
name = "morph"
path = "src/lib.rs"
test = false

[dependencies]
derive_more = "0.99.7"
heapless = "0.5.5"
tinybmp = "0.2.3"
embedded-graphics = "0.6.2"
stretch = { git = "https://github.com/vislyhq/stretch.git", default-features = false }

[target.thumbv7m-none-eabi.dependencies]
sh1106 = "0.3.2"
embedded-hal = "0.2.3"
nb = "0.1.2"
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
panic-semihosting = "0.5.2"
# alloc-cortex-m = "0.3.5"
cortex-m-semihosting = "0.3.5"
panic-halt = "0.2.0"
stm32f1xx-hal = { version = "0.4.0", features = ["rt", "stm32f103"] }

[target.wasm32-unknown-unknown.dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
canvas-display = { git = "https://codeberg.org/morph/canvas-display.git", features = ["offscreen"] }
[target.wasm32-unknown-unknown.dependencies.web-sys]
    version = "0.3"
    features = [
        'Node',
        'Element',
        'console', 
        'CanvasRenderingContext2d',
        'Document',
        'Element',
        'ImageData',
        'HtmlCanvasElement',
        'HtmlElement',
        'Window',
    ]

[features]
default = ["console_error_panic_hook", "std"]
std = ["stretch/std"]

[profile.release]
opt-level = "z"
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations