[package]
name = "examples"
version = "0.1.0"
authors = ["Florian Blasius <flovanpt@posteo.de>"]
edition = "2018"
publish = false

[[example]]
name = "native_counter"
path = "native-counter.rs"

[dev-dependencies]
heapless = "0.5"
morph = { path = "../morph" }

[target.'cfg(any(target_os = "linux", target_os = "macos", target_os = "windows"))'.dev-dependencies]
morph-native = { path = "../morph-native" }
raqote-display = "0.1"