[package]
name = "counter"
version = "0.1.0"
authors = ["Florian Blasius <flovanpt@posteo.de>"]
edition = "2018"

[dependencies]
stm32f1xx-hal = { version = "0.4", features = ["rt", "stm32f103"] } 
embedded-graphics = "0.6.2"
cortex-m-semihosting = "0.3.5"
sh1106 = "0.3.2"
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
panic-semihosting = "0.5.2"
morph = { path = "../../../", default_features = false }

[profile.release]
opt-level = "z"
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations