[package]
name = "minimal"
version = "0.1.0"
authors = ["Florian Blasius <flovanpt@posteo.de>"]
edition = "2018"

[dependencies]
cortex-m = "0.6.2"
cortex-m-rt = "0.6.12"
cortex-m-semihosting = "0.3.5"
panic-halt = "0.2.0"
embedded-graphics = "0.6.2"
st7735-lcd = { version = "0.7.1" }
stm32f1xx-hal = { version = "0.5.3", features = ["rt", "stm32f103", "medium"] }
morph = { path = "../../../", default_features = false }