[package]
name = "minimal"
version = "0.1.0"
authors = ["Florian Blasius <flovanpt@posteo.de>"]
edition = "2018"

[dependencies]
cortex-m = "0.6.2"
cortex-m-rt = "0.6.12"
cortex-m-semihosting = "0.3.5"
panic-halt = "0.2.0"
stm32f1xx-hal = { version = "0.5.3", features = ["rt", "stm32f103", "medium"] }
morph = { path = "../../../", default_features = false }

[profile.release]
opt-level = "z"
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations