[package]
name = "minimal"
version = "0.1.0"
authors = ["Florian Blasius <flovanpt@posteo.de>"]
edition = "2018"

[dependencies]
stm32f1xx-hal = { version = "0.5", features = ["rt", "stm32f103", "medium"] } 
panic-semihosting = "0.5"
st7735-lcd = "0.7"
morph = { path = "../../../", default_features = false }
cortex-m = "0.6"
cortex-m-rt = "0.6"
cortex-m-semihosting = "0.3.5"


[profile.release]
opt-level = "z"
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations